--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="./assets/js/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./assets/js/slick/slick-theme.css"/>
 
-    <title>Hello, world!</title>
+    <title>Selamat Datang - PT. Megah Solusi Bersama</title>
   </head>
   <body>
     <div id="loading-ajax">
@@ -26,7 +26,7 @@
     <div id="navbar-desktop" class="navbar-mode-desktop">
         <div class="nd-wrapper">
             <div class="navbar-comp-logo">
-                <img src="./assets/images/logo.png" height="60" width="auto">
+                <img src="./assets/images/logo-msb-white.png" height="60" width="auto">
             </div>
             <div class="link-lists">
                 <div class="link-list">
@@ -53,7 +53,7 @@
     <div id="navbar-mobile" class="navbar-mode-mobile" style="display: none;">
         <div class="nm-wrapper">
             <div class="navbar-comp-logo mobile-comp-logo">
-                <img src="./assets/images/logo3-trans.png" height="60" width="auto" style="margin-left: 20px; border-radius: 10px;">
+                <img src="./assets/images/logo-msb-white.png" height="60" width="auto" style="margin-left: 20px; border-radius: 10px;">
             </div>
             <div class="navigation-btn" onclick="menuActive();">
                 <a><span><i class="fas fa-bars"></i></span></a>
@@ -105,7 +105,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4" style="height: auto; background-color: green;">
+                <div class="col-md-4">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.2716590521813!2d106.79666331476918!3d-6.2278702954918135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f13b87f82445%3A0x6ec2c8a2c12c60b0!2sPT.%20Megah%20Solusi%20Bersama!5e0!3m2!1sid!2sid!4v1622279670696!5m2!1sid!2sid" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
                 </div>
             </div>
