--- a/pages/home.html
+++ b/pages/home.html
@@ -19,85 +19,34 @@
         <div class="card-slider-wrapper">
             <div class="card">
                 <div class="testimoni-detail" style="width: 100%; height: auto; position: relative;">
-                    <h2 style="padding: 5px 18px 0px 18px;">The Best Company that really demand our needs!</h2>
+                    <h2 style="padding: 5px 18px 0px 18px;">Pelayanan terbaik adalah Tekat Kami</h2>
                     <span class="quote-left"><i class="fas fa-quote-left"></i></span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ad veniam, esse voluptates corporis nisi perspiciatis, nostrum ut, perferendis maxime beatae expedita temporibus inventore ipsam sint libero. Tempore, nostrum fugit!</p>
+                    <p>Memberikan pelayanan terbaik adalah tekat kami dalam membangun perusahaan ini. Sehingga setiap pelanggan yang datang akan merasakan kepuasan bukan rasa kecewa</p>
                     <span class="quote-right"><i class="fas fa-quote-right"></i></span>
                     <div class="who-testi-wrapper">
                         <div class="photo">
                             <img src="./assets/images/photo-person/stevencoen-300x300.png">
                         </div>
                         <div style="margin: auto">
-                            <h6>Arnold Lorem</h6>
-                            <h6>CEO - Puskesmas Jatimulya</h6>
+                            <h6>Indina Yunita</h6>
+                            <h6>CEO - Megah Solusi Bersama</h6>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="card">
                 <div class="testimoni-detail" style="width: 100%; height: auto; position: relative;">
-                    <h2 style="padding: 5px 18px 0px 18px;">They have everything our needs</h2>
+                    <h2 style="padding: 5px 18px 0px 18px;">Ketepatan dan Kecepatan Prinsip Utama Kami</h2>
                     <span class="quote-left"><i class="fas fa-quote-left"></i></span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ad veniam, esse voluptates corporis nisi perspiciatis, nostrum ut, perferendis maxime beatae expedita temporibus inventore ipsam sint libero. Tempore, nostrum fugit!</p>
+                    <p>Ketepatan dan Kecepatan menentukan seberapa serius perusahaan kami dalam melaani pelanggan, sehingga kami terus berkomitmen dalam memberikan ketepatan pemilihan dan pengirimaan kebutuhan anda</p>
                     <span class="quote-right"><i class="fas fa-quote-right"></i></span>
                     <div class="who-testi-wrapper">
                         <div class="photo">
                             <img src="./assets/images/photo-person/stevencoen-300x300.png">
                         </div>
                         <div style="margin: auto">
-                            <h6>Arnold Lorem</h6>
-                            <h6>CEO - Puskesmas Jatimulya</h6>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="testimoni-detail" style="width: 100%; height: auto; position: relative;">
-                    <h2 style="padding: 5px 18px 0px 18px;">What a wonderful company!</h2>
-                    <span class="quote-left"><i class="fas fa-quote-left"></i></span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ad veniam, esse voluptates corporis nisi perspiciatis, nostrum ut, perferendis maxime beatae expedita temporibus inventore ipsam sint libero. Tempore, nostrum fugit!</p>
-                    <span class="quote-right"><i class="fas fa-quote-right"></i></span>
-                    <div class="who-testi-wrapper">
-                        <div class="photo">
-                            <img src="./assets/images/photo-person/stevencoen-300x300.png">
-                        </div>
-                        <div style="margin: auto">
-                            <h6>Arnold Lorem</h6>
-                            <h6>CEO - Puskesmas Jatimulya</h6>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="testimoni-detail" style="width: 100%; height: auto; position: relative;">
-                    <h2 style="padding: 5px 18px 0px 18px;">Nothing lorem ipsum would do this shit!</h2>
-                    <span class="quote-left"><i class="fas fa-quote-left"></i></span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ad veniam, esse voluptates corporis nisi perspiciatis, nostrum ut, perferendis maxime beatae expedita temporibus inventore ipsam sint libero. Tempore, nostrum fugit!</p>
-                    <span class="quote-right"><i class="fas fa-quote-right"></i></span>
-                    <div class="who-testi-wrapper">
-                        <div class="photo">
-                            <img src="./assets/images/photo-person/stevencoen-300x300.png">
-                        </div>
-                        <div style="margin: auto">
-                            <h6>Arnold Lorem</h6>
-                            <h6>CEO - Puskesmas Jatimulya</h6>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="testimoni-detail" style="width: 100%; height: auto; position: relative;">
-                    <h2 style="padding: 5px 18px 0px 18px;">WTF!</h2>
-                    <span class="quote-left"><i class="fas fa-quote-left"></i></span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ad veniam, esse voluptates corporis nisi perspiciatis, nostrum ut, perferendis maxime beatae expedita temporibus inventore ipsam sint libero. Tempore, nostrum fugit!</p>
-                    <span class="quote-right"><i class="fas fa-quote-right"></i></span>
-                    <div class="who-testi-wrapper">
-                        <div class="photo">
-                            <img src="./assets/images/photo-person/stevencoen-300x300.png">
-                        </div>
-                        <div style="margin: auto">
-                            <h6>Arnold Lorem</h6>
-                            <h6>CEO - Puskesmas Jatimulya</h6>
+                            <h6>Pujiono</h6>
+                            <h6>Direktur - Megah Solusi Bersama</h6>
                         </div>
                     </div>
                 </div>
@@ -112,7 +61,7 @@
                         <img src="./assets/images/phone.svg" height="50" style="padding: 5px; margin-right: 10px;">
                         <div>
                             <h6 style="font-size: 1.2em;margin: 0;">We're on call 24/7</h6>
-                            <p style="font-size: 0.8rem;">+6281312345678</p>
+                            <p style="font-size: 0.8rem;">(+62) 81 - 3167 35067</p>
                         </div>
                     </div>
                 </div>
@@ -121,7 +70,7 @@
                         <img src="./assets/images/clock.svg" height="50" style="padding: 5px; margin-right: 10px;">
                         <div>
                             <h6 style="font-size: 1.2em;margin: 0;">Operating Hours</h6>
-                            <p style="font-size: 0.8rem;">Mon-Sat 8AM-8PM</p>
+                            <p style="font-size: 0.8rem;">Mon-Fri 08.30 - 16.00</p>
                         </div>
                     </div>
                 </div>
@@ -130,7 +79,7 @@
                         <img src="./assets/images/mail.svg" height="50" style="padding: 5px; margin-right: 10px;">
                         <div>
                             <h6 style="font-size: 1.2em;margin: 0;">Write To Us</h6>
-                            <p style="font-size: 0.8rem;">info.ptmsb@megahsolusibersama.com</p>
+                            <p style="font-size: 0.8rem;">marketing@megahsolusibersama.com</p>
                         </div>
                     </div>
                 </div>
@@ -143,16 +92,16 @@
             <div class="row">
                 <div class="col-md-5">
                     <div class="title" style="height: auto; width: auto;">
-                        <h2>WE ARE COMMITED TO DELIVER EXCELLENCE</h2>
+                        <h2>KAMI BERKOMITMEN MEMBERIKAN LAYANAN TERBAIK</h2>
                     </div>
                 </div>
                 <div class="col-md-7 subtitlesect3">
-                    <h3 style="margin-bottom: 20px;">WELCOME TO PT MEGAH SOLUSI BERSAMA</h3>
+                    <h3 style="margin-bottom: 20px;">PT MEGAH SOLUSI BERSAMA</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa corrupti doloremque repellat in repudiandae eveniet voluptatibus cumque ipsam quibusdam, alias, nobis vero fuga iste, deserunt nulla. Neque ipsa eius tenetur?
+                        Megah solusi bersama adalah sebuah perusahaan berbasis teknologi informasi yang berlokasi di Senayan Trade Center, Jakarta pusat. Adapun pelayanan yang kami berikan meliputi penjualan hardware dan software, instalasi & perbaikan komputer, CCTV atau PABX.
                     </p>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa corrupti doloremque repellat in repudiandae eveniet voluptatibus cumque ipsam quibusdam, alias, nobis vero fuga iste, deserunt nulla. Neque ipsa eius tenetur?
+                        Kami berkomitmen untuk selalu memberikan pelayanan terbaik kepada setiap pelanggan yang melakukan kerja sama dengan kami, mulai dari ketepatan dalam memilih produk yang diperlukan bagi perusahaan anda hingga kecepatan pengiriman.
                     </p>
                 </div>
             </div>
