--- a/index.html
+++ b/index.html
@@ -30,26 +30,24 @@
             </div>
             <div class="link-lists">
                 <div class="link-list">
-                    <a href="#">Products <span><i class="fas fa-plus"></i></span></a>
+                    <a href="#">Home <i class="fas fa-plus"></i></a>
                 </div>
                 <div class="link-list">
-                    <a href="#">Solutions <span><i class="fas fa-plus"></i></span></a>
+                    <a href="#">Profile <i class="fas fa-plus"></i></a>
                 </div>
                 <div class="link-list">
-                    <a href="#">Resources <span><i class="fas fa-plus"></i></span></a>
+                    <a href="#">Products <i class="fas fa-plus"></i></a>
                 </div>
                 <div class="link-list">
-                    <a href="#">Partners <span><i class="fas fa-plus"></i></span></a>
+                    <a href="#">Partners <i class="fas fa-plus"></i></a>
                 </div>
                 <div class="link-list">
-                    <a href="#">About Us <span><i class="fas fa-plus"></i></span></a>
-                </div>
-                <div class="link-list">
-                    <a href="#" class="btn btn-secondary" style="color: white !important;">Make Appointment Now</a>
+                    <a href="tel:6281316735067" class="btn btn-light" style="color: black;">Contact Us</a>
                 </div>
             </div>
         </div>
     </div>
+    
     <div id="navbar-mobile" class="navbar-mode-mobile" style="display: none;">
         <div class="nm-wrapper">
             <div class="navbar-comp-logo mobile-comp-logo">
@@ -64,22 +62,19 @@
         <a onclick="menuNonactive();" style="float: right;margin: 25px; font-size: 2em;"><span><i class="fas fa-times"></i></span></a>
         <div class="wrapper" style="padding: 88px;">
             <div class="link-list">
-                <a href="#"><span><i class="fas fa-plus fa-fw"></i></span></span>Products</a>
+                <a href="#">Home <span><i class="fas fa-plus"></i></span></a>
             </div>
             <div class="link-list">
-                <a href="#"><span><i class="fas fa-plus fa-fw"></i></span></span>Solutions</a>
+                <a href="#">Profile <span><i class="fas fa-plus"></i></span></a>
             </div>
             <div class="link-list">
-                <a href="#"><span><i class="fas fa-plus fa-fw"></i></span></span>Resources</a>
+                <a href="#">Products <span><i class="fas fa-plus"></i></span></a>
             </div>
             <div class="link-list">
-                <a href="#"><span><i class="fas fa-plus fa-fw"></i></span></span>Partners</a>
+                <a href="#">Partners <span><i class="fas fa-plus"></i></span></a>
             </div>
             <div class="link-list">
-                <a href="#"><span><i class="fas fa-plus fa-fw"></i></span></span>About Us</a>
-            </div>
-            <div class="link-list">
-                <a href="#" class="btn btn-secondary" style="color: white !important;">Make Appointment Now</a>
+                <a href="mailto:marketing@megahsolusibersama.com" class="btn btn-secondary" style="color: white !important;">Contact Us</a>
             </div>
         </div>
     </div>
