--- a/pages/home.html
+++ b/pages/home.html
@@ -2,15 +2,15 @@
     <header>
         <div class="container">
             <div class="welcome-wrapper">
-                <h1>Security-as-a-Service Simplified</h1>
-                <p style="color: #FCF5FF; font-size: 1.2em; margin-top: 17px;">1,500+ customers across 42 countries trust us with around-the-clock threat detection and response to protect their sensitive workloads.</p>
+                <h1>Kegiatan Perusahaan Semakin Mudah</h1>
+                <p style="color: #FCF5FF; font-size: 1.2em; margin-top: 17px;">Sudah banyak pelanggan yang mempercayai di bidang penjualan hardware dan software, instalasi & perbaikan komputer, CCTV atau PABXs</p>
             </div>
             <div class="welcome-button">
                 <div class="wlcm-btn btn-0">
-                    <a href="#">How we Work</a>
+                    <a href="#">Profil</a>
                 </div>
                 <div class="wlcm-btn btn-1">
-                    <a href="#"><span style="margin-right: 10px;"><i class="fas fa-play"></i></span>Watch Video</a>
+                    <a href="#"><span style="margin-right: 10px;"><i class="fas fa-play"></i></span>Hubungi Kami</a>
                 </div>
             </div>
         </div>
@@ -18,14 +18,14 @@
     <section class="sect-1">
         <div class="card-slider-wrapper">
             <div class="card">
-                <div class="testimoni-detail" style="width: 100%; height: auto; position: relative;">
+                <div class="testimoni-detail" style="width: 100%; height: 100%; position: relative;">
                     <h2 style="padding: 5px 18px 0px 18px;">Pelayanan terbaik adalah Tekat Kami</h2>
                     <span class="quote-left"><i class="fas fa-quote-left"></i></span>
                     <p>Memberikan pelayanan terbaik adalah tekat kami dalam membangun perusahaan ini. Sehingga setiap pelanggan yang datang akan merasakan kepuasan bukan rasa kecewa</p>
                     <span class="quote-right"><i class="fas fa-quote-right"></i></span>
                     <div class="who-testi-wrapper">
                         <div class="photo">
-                            <img src="./assets/images/photo-person/stevencoen-300x300.png">
+                            <img src="./assets/images/photo-person/ceo-first-300x300.png">
                         </div>
                         <div style="margin: auto">
                             <h6>Indina Yunita</h6>
@@ -35,14 +35,14 @@
                 </div>
             </div>
             <div class="card">
-                <div class="testimoni-detail" style="width: 100%; height: auto; position: relative;">
+                <div class="testimoni-detail" style="width: 100%; height: 100%; position: relative;">
                     <h2 style="padding: 5px 18px 0px 18px;">Ketepatan dan Kecepatan Prinsip Utama Kami</h2>
                     <span class="quote-left"><i class="fas fa-quote-left"></i></span>
                     <p>Ketepatan dan Kecepatan menentukan seberapa serius perusahaan kami dalam melaani pelanggan, sehingga kami terus berkomitmen dalam memberikan ketepatan pemilihan dan pengirimaan kebutuhan anda</p>
                     <span class="quote-right"><i class="fas fa-quote-right"></i></span>
                     <div class="who-testi-wrapper">
                         <div class="photo">
-                            <img src="./assets/images/photo-person/stevencoen-300x300.png">
+                            <img src="./assets/images/photo-person/ceo-second-300x300.png">
                         </div>
                         <div style="margin: auto">
                             <h6>Pujiono</h6>
